--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Set up SnowSQL
         run: |
           curl -o snowsql-1.2.6-linux_x86_64.bash https://sfc-repo.snowflakecomputing.com/snowsql/bootstrap/1.2/linux_x86_64/snowsql-1.2.6-linux_x86_64.bash
+          chmod +x snowsql-1.2.6-linux_x86_64.bash
           bash snowsql-1.2.6-linux_x86_64.bash
 
       - name: Run tests
