--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,9 +15,9 @@ jobs:
 
       - name: Set up SnowSQL
         run: |
-          curl -o snowsql-1.2.6-linux_x86_64.bash https://sfc-repo.snowflakecomputing.com/snowsql/bootstrap/1.2/linux_x86_64/snowsql-1.2.6-linux_x86_64.bash
-          chmod +x snowsql-1.2.6-linux_x86_64.bash
-          bash snowsql-1.2.6-linux_x86_64.bash
+          curl -o snowsql-linux_x86_64.bash https://sfc-repo.snowflakecomputing.com/snowsql/bootstrap/1.2/linux_x86_64/snowsql-1.2.27-linux_x86_64.bash
+          chmod +x snowsql-linux_x86_64.bash
+          bash snowsql-linux_x86_64.bash
 
       - name: Run tests
         run: |
