--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,9 +22,9 @@ jobs:
 
       - name: Run tests
         run: |
-          snowsql -a ${{ secrets.SNOWSQL_ACCOUNT }} -u ${{ secrets.SNOWSQL_USERNAME }} -w ${{ secrets.SNOWSQL_WAREHOUSE }} -d ${{ secrets.SNOWSQL_DATABASE }} -s ${{ secrets.SNOWSQL_SCHEMA }} -f create_table.sql
-          snowsql -a ${{ secrets.SNOWSQL_ACCOUNT }} -u ${{ secrets.SNOWSQL_USERNAME }} -w ${{ secrets.SNOWSQL_WAREHOUSE }} -d ${{ secrets.SNOWSQL_DATABASE }} -s ${{ secrets.SNOWSQL_SCHEMA }} -f test_table.sql
+          ~/bin/snowsql -a ${{ secrets.SNOWSQL_ACCOUNT }} -u ${{ secrets.SNOWSQL_USERNAME }} -w ${{ secrets.SNOWSQL_WAREHOUSE }} -d ${{ secrets.SNOWSQL_DATABASE }} -s ${{ secrets.SNOWSQL_SCHEMA }} -f create_table.sql
+          ~/bin/snowsql -a ${{ secrets.SNOWSQL_ACCOUNT }} -u ${{ secrets.SNOWSQL_USERNAME }} -w ${{ secrets.SNOWSQL_WAREHOUSE }} -d ${{ secrets.SNOWSQL_DATABASE }} -s ${{ secrets.SNOWSQL_SCHEMA }} -f test_table.sql
 
       - name: Deploy to Snowflake
         run: |
-          snowsql -a ${{ secrets.SNOWSQL_ACCOUNT }} -u ${{ secrets.SNOWSQL_USERNAME }} -w ${{ secrets.SNOWSQL_WAREHOUSE }} -d ${{ secrets.SNOWSQL_DATABASE }} -s ${{ secrets.SNOWSQL_SCHEMA }} -f create_table.sql
+         ~/bin/snowsql -a ${{ secrets.SNOWSQL_ACCOUNT }} -u ${{ secrets.SNOWSQL_USERNAME }} -w ${{ secrets.SNOWSQL_WAREHOUSE }} -d ${{ secrets.SNOWSQL_DATABASE }} -s ${{ secrets.SNOWSQL_SCHEMA }} -f create_table.sql
