--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,15 @@ jobs:
   test-deploy:
     runs-on: ubuntu-latest
 
+    env:
+        SNOWSQL_PWD: ${{ secrets.SNOWFLAKE_PASSWORD }}
+        SNOWSQL_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
+        SNOWSQL_USER: ${{ secrets.SNOWFLAKE_USERNAME }}
+        SNOWSQL_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
+        SNOWSQL_SCHEMA: ${{ secrets.SNOWFLAKE_SCHEMA }}
+        SNOWSQL_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
+        SNOWSQL_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
