--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,13 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-        SNOWSQL_PWD: ${{ secrets.SNOWFLAKE_PASSWORD }}
-        SNOWSQL_ACCOUNT: ${{ secrets.SNOWFLAKE_ACCOUNT }}
-        SNOWSQL_USER: ${{ secrets.SNOWFLAKE_USERNAME }}
-        SNOWSQL_DATABASE: ${{ secrets.SNOWFLAKE_DATABASE }}
-        SNOWSQL_SCHEMA: ${{ secrets.SNOWFLAKE_SCHEMA }}
-        SNOWSQL_ROLE: ${{ secrets.SNOWFLAKE_ROLE }}
-        SNOWSQL_WAREHOUSE: ${{ secrets.SNOWFLAKE_WAREHOUSE }}
+        SNOWSQL_PWD: ${{ secrets.SNOWSQL_PASSWORD }}
+        SNOWSQL_ACCOUNT: ${{ secrets.SNOWSQL_ACCOUNT }}
+        SNOWSQL_USER: ${{ secrets.SNOWSQL_USER }}
+        SNOWSQL_DATABASE: ${{ secrets.SNOWSQL_DATABASE }}
+        SNOWSQL_SCHEMA: ${{ secrets.SNOWSQL_SCHEMA }}
+        SNOWSQL_ROLE: ${{ secrets.SNOWSQL_ROLE }}
+        SNOWSQL_WAREHOUSE: ${{ secrets.SNOWSQL_WAREHOUSE }}
 
     steps:
       - name: Checkout code
